tests/fixtures/invalid/write_file_content_type.lby
fn bad -> void
    write_file("target/out.txt", false)
